; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_get_default_output_device.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_mac-audio.c_get_default_output_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.coreaudio_data = type { i32 }
%struct.device_list = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__*, i32 }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.coreaudio_data*)* @get_default_output_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_default_output_device(%struct.coreaudio_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.coreaudio_data*, align 8
  %4 = alloca %struct.device_list, align 8
  store %struct.coreaudio_data* %0, %struct.coreaudio_data** %3, align 8
  %5 = call i32 @memset(%struct.device_list* %4, i32 0, i32 16)
  %6 = call i32 @coreaudio_enum_devices(%struct.device_list* %4, i32 0)
  %7 = getelementptr inbounds %struct.device_list, %struct.device_list* %4, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %28

12:                                               ; preds = %1
  %13 = load %struct.coreaudio_data*, %struct.coreaudio_data** %3, align 8
  %14 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @bfree(i32 %15)
  %17 = getelementptr inbounds %struct.device_list, %struct.device_list* %4, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i64 0
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @bstrdup(i32 %23)
  %25 = load %struct.coreaudio_data*, %struct.coreaudio_data** %3, align 8
  %26 = getelementptr inbounds %struct.coreaudio_data, %struct.coreaudio_data* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 4
  %27 = call i32 @device_list_free(%struct.device_list* %4)
  store i32 1, i32* %2, align 4
  br label %28

28:                                               ; preds = %12, %11
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @memset(%struct.device_list*, i32, i32) #1

declare dso_local i32 @coreaudio_enum_devices(%struct.device_list*, i32) #1

declare dso_local i32 @bfree(i32) #1

declare dso_local i32 @bstrdup(i32) #1

declare dso_local i32 @device_list_free(%struct.device_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
